--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,9 @@ body {
     width: 100vw;
     height: 90vh;
 }
+.game {
+    justify-content: flex-start;
+}
 
 .btn {
     border: none;
@@ -60,6 +63,15 @@ body {
     background: #b6bdc5;
 }
 
+canvas {
+    border: 1px solid black;
+}
+
+.word {
+    font-size: 36px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
 footer {
     position: absolute;
     display: flex;
